unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Revenue_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Subcategory__c</fullName>
    <description>Used by the Customer360 component as well as other reports and dashboards as the detail level categorization of revenue (dependent on value of Revenue Category field).</description>
    <inlineHelpText>Used by the Customer360 component as well as other reports and dashboards as the detail level categorization of revenue (dependent on value of Revenue Category field).</inlineHelpText>
    <label>Revenue Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Revenue_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Member</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Candidate Fees</fullName>
            </value>
            <value>
                <fullName>Maintenance Fees</fullName>
            </value>
            <value>
                <fullName>Tax/VAT</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>