unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/ROEApi__Group_Registration_Key__c.field-meta.xml
<CustomField>
    <fullName>ROEApi__Group_Registration_Key__c</fullName>
    <description>** SYSTEM ** Unique Group Registration Key</description>
    <inlineHelpText>** SYSTEM ** Unique Group Registration Key</inlineHelpText>
    <label>SYSTEM</label>
    <length>18</length>
    <type>Text</type>
</CustomField>