unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/SOID__c.field-meta.xml
<CustomField>
    <fullName>SOID__c</fullName>
    <formula>CASESAFEID(OrderApi__Sales_Order__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOID</label>
    <type>Text</type>
</CustomField>