unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Sponsoring_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Sponsoring_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsoring Relationship</label>
    <referenceTo>Sponsoring_Relationships__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>