unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/SRID__c.field-meta.xml
<CustomField>
    <fullName>SRID__c</fullName>
    <formula>CASESAFEID(Sponsoring_Relationship__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SRID</label>
    <type>Text</type>
</CustomField>