unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Total_Deposits_Reported__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposits_Reported__c</fullName>
    <formula>TEXT(OrderApi__Account__r.Total_Deposits__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deposits Reported</label>
    <type>Text</type>
</CustomField>