unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <formula>Sponsoring_Relationship__r.Volume_Upload__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>