unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OrderApi__Sales_Order__c</columns>
    <columns>NAME</columns>
    <columns>OrderApi__Account__c</columns>
    <columns>Primary_R_T__c</columns>
    <columns>Amount_Invoiced__c</columns>
    <columns>Annual_Dues__c</columns>
    <columns>Membership_Date__c</columns>
    <columns>Billing_Quarter__c</columns>
    <columns>OrderApi__Item__c</columns>
    <columns>OrderApi__Is_Posted__c</columns>
    <columns>OrderApi__Is_Line_Posted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderApi__Price_Rule__c</columns>
    <columns>FON_Number_Of_Attendees__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>